--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <img id="pic" src="images/fes.png" alt="fes" width="300">
                 <li><strong>Arts:</strong> Rich in folk music, dance, and theater. Baily Road is the heart of Dhaka’s theater scene.</li>
                 <img id="pic" src="images/fol.png" alt="fol" width="300">
-                <li><strong>Cuisine:</strong> Famous for biryani, haleem, jilapi, and street food in Old Dhaka.</li>
+                <li><strong>Cuisine:</strong> Famous for biryani, haleem, jilapi, bakorkhani, Beauty-Lacchi, and street food in Old Dhaka.</li>
                 <img id="pic" src="images/fd.png" alt="fd" width="300">
                 <li><strong>Landmarks:</strong> Shaheed Minar, Dhakeshwari Temple, and Liberation War Museum reflect Dhaka’s cultural depth.</li>
             </ul>
@@ -130,14 +130,7 @@
                     <th>Name</th>
                     <th>Profession</th>
                     <th>Notable Work</th>
-                </tr>
-                <tr>
-                      <tr>
-                    <td> Dr.Muhammad Yunus</td>
-                    <td>Social Entrepreneur, Economist, Banker, Civil Society Leader</td>
-                    <td>Founder of Grameen Bank (1976),Nobel Peace Prize Laureate (2006),
-                        Chief Adviser of Bangladesh’s Interim Government (Aug-2024 to Present)</td>
-                </tr>
+            </t>
                 <tr>
                     <td>Fazlur Rahman Khan</td>
                     <td>Architect</td>
@@ -259,7 +252,7 @@
         <section>
         <div class="thank-you-section">
   <h2>Thank You for Visiting!</h2>
-  <p>Your interest in Old Dhaka means the world to me. I hope you enjoyed exploring its rich history and vibrant culture.</p>
+  <p>Your interest in Dhaka means the world to me. I hope you enjoyed exploring its rich history and vibrant culture.</p>
 </div>
 </section
         
@@ -271,4 +264,5 @@
 </footer>
 <hr>
 </body>
+
 </html>
