--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section>
             <h2>🏙️ Introduction</h2>
             <p>
-                Dhaka (ঢাকা), the capital and largest city of Bangladesh, is a vibrant megacity located on the banks of the Buriganga River. Known as the "City of Mosques" and the "City of Rickshaws," it is one of the most densely populated urban areas in the world. With over 23 million people in the metropolitan area, Dhaka is a cultural, economic, and political hub of South Asia.
+                Dhaka (ঢাকা), the capital and largest city of Bangladesh, is a vibrant megacity located on the banks of the Buriganga River. Known as the "City of Mosques" and the "City of Rickshaws,"  With over 23 million people in the metropolitan area, Dhaka is a cultural, economic, and political hub of South Asia.
             </p>
             <img id="pic" src="images/bg1.png" alt="Dhaka Introduction" width="300">
         </section>
