--- a/author.html
+++ b/author.html
@@ -16,21 +16,25 @@
     </header>
     <hr>
         <main>
-        <!-- Author Info -->
-           <section class="author-details">
+        <!--Author Info -->
+           <section class="author-details"> 
             <img src="images\ok.jpg" alt="ok.jpg" width="120" height="120">
-            <p><strong>Name:</strong>Vepada Ram Das</p>
+             <p><strong>Name:</strong>Vepada Ram Das</p> 
             <p><strong>ID No:</strong> 1038</p>
             <p><strong>Section :</strong> 2A1</p>
             <p><strong>Email:</strong> thevepada@gmail.com</p>
-            <p><strong>Bio:</strong> Enthusiastically pursuing My BSc Degree in Computer Science  and  Engineering (1st Year) at UITS in Department of CSE, with a focus on programming and web development.
+            <p><strong>Bio:</strong> Enthusiastically pursuing My BSc Degree,<br>
+                 in Computer Science  and  Engineering (1st Year) at <br>
+                  UITS in Department of CSE,<br>
+                  with a focus on programming and web development.
  </p>
         </section> 
 
-        <hr>
-         <button onclick="window.location.href='index.html'"> Back to home</button>
+<hr>
+
         <footer id="foot">
             <p>&copy; 2025 Vepada Ram</p>
+             <button onclick="window.location.href='index.html'"> Back to Home </button>
             
         </footer>
         <hr>
