--- a/author.html
+++ b/author.html
@@ -19,7 +19,7 @@
         <!--Author Info -->
            <section class="author-details"> 
             <img src="images\ok.jpg" alt="ok.jpg" width="120" height="120">
-             <p><strong>Name:</strong>Vepada Ram Das</p> 
+             <p><strong>Name:</strong>Bepara Ram Das</p> 
             <p><strong>ID No:</strong> 1038</p>
             <p><strong>Section :</strong> 2A1</p>
             <p><strong>Email:</strong> thevepada@gmail.com</p>
