--- a/author.html
+++ b/author.html
@@ -19,7 +19,7 @@
         <!--Author Info -->
            <section class="author-details"> 
             <img src="images\ok.jpg" alt="ok.jpg" width="120" height="120">
-             <p><strong>Name:</strong> Bepara Ram Das</p> 
+             <p><strong>Name:</strong> Vepada Ram Das</p> 
             <p><strong>ID No:</strong> 1038</p>
             <p><strong>Section :</strong> 2A1</p>
             <p><strong>Email:</strong> thevepada@gmail.com</p>
@@ -29,6 +29,18 @@
                   with a focus on programming and web development.
  </p>
         </section> 
+
+            <section id="location-map" style="margin: 40px 0; text-align: center;">
+        <h2>🗺️ Location Map of Barisal</h2>
+        <p>The location of Barisal city is shown on the map below."
+
+।</p>
+        <img
+            src="images/1aa.png"
+            alt="Map of Barisal"
+            style="width: 90%; max-width: 700px; border: 2px solid #555; border-radius: 8px;"
+        />
+    </section>
 
 <hr>
 
